# NVAP-site

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
.codex/environments/: environment.toml
scripts/: benchmark_green_denoise.py  build_windows.ps1
src/nvap/: __init__.py  app.py  pipeline.py
src/nvap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nvap/analysis/: __init__.py  green_benchmark.py  metrics.py
src/nvap/cache/: __init__.py  processed_cache.py
src/nvap/config/: __init__.py  types.py
src/nvap/export/: exporters.py
src/nvap/io/: __init__.py  stack_loader.py
src/nvap/plugins/: __init__.py  contracts.py  registry.py
src/nvap/preprocess/: __init__.py  denoisers.py  enhancement.py  missing_slices.py  psf.py  resample.py
src/nvap/render/: __init__.py  vtk_scene.py
src/nvap/ui/: control_panel.py  main_window.py
tests/integration/: test_cache_key_includes_denoise_config.py  test_green_denoise_performance_guard.py  test_pipeline_dataset.py  test_pipeline_green_quality_regression.py  test_snapshot_export.py
tests/unit/: test_backend_fallback.py  test_green_denoise_branch_retention.py  test_green_denoise_speckle_reduction.py  test_metrics.py  test_missing_slices.py  test_noise_estimation.py  test_preprocess_enhancement.py  test_psf.py  test_resample_mesh.py  test_stack_loader.py
web/: .assetsignore  _worker.js  docs.html  index.html  wrangler.jsonc
web/assets/: nvap.css  nvap.js
